--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,18 +17,23 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  http: ^0.12.1
   google_fonts: ^0.2.0
   flutter:
     sdk: flutter
 
+  google_maps_flutter: ^0.5.27+3
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  json_annotation: ^3.0.0
 
 dev_dependencies:
-  http: ^0.12.1
+  build_runner: ^1.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
