--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   json_annotation: ^3.0.0
+  uuid: ^2.2.2
 
 dev_dependencies:
   build_runner: ^1.0.0
